	argument to `min' for avoiding error "Wrong number of arguments:
	min, 0".

2010-01-28  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-render-timeline): simplified by
	using `insert-before-markers' instead of `insert'. This removes
	additional movement of points for scroll-mode.

2010-01-26  Satoshi Yatagawa  <yata_github@y.hauN.org>
	
	* twittering-mode.el (toplevel): Require 'unicode explicitly on
	Emacs21. See a comment of `twittering-ucs-to-char' for more
	details.
	(twittering-ucs-to-char): Check (featurep 'unicode) instead of
	(featurep 'mucs).
	(twittering-ucs-to-char): Update comment.

	* twittering-mode.el (toplevel): On Emacs21, always call
	`set-terminal-coding-system'.

2010-01-25  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-format-status): Call
	`twittering-make-display-spec-for-icon' only when `window-system'
	is non-nil to avoid error "Non-X frame used" under Emacs which is
	using a text-only terminal.

2010-01-23  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-json-to-status-datum): Don't
	refer to `twittering-use-native-retweet'; same as
	`twittering-status-to-status-datum'.

2010-01-23  Naohiro Aota  <naota@elisp.net>

	* twittering-mode.el (twittering-home-timeline): Add new funciton.

2010-01-23  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-fill-string): adjust
	`fill-column' to the minimum width of windows displaying
	`*twittering*' buffer. Thanks to Naohiro Aota.

	* twittering-mode.el (twittering-render-timeline): take account of
	multiple windows displaying `*twittering*' buffer.
	Thanks to Naohiro Aota.

	* twittering-mode.el (twittering-format-status): fix an incorrect
	index on filling text for the specifier "%t".

2010-01-23  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-timeline-spec-to-host-method):
	return query string as a element of returned list.